manifests/dev/cluster/kgateway/apps_v1_deployment_kgateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: kgateway
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kgateway
    app.kubernetes.io/version: v2.3.0
    helm.sh/chart: kgateway-v2.3.0
    kgateway: kgateway
  name: kgateway
  namespace: kgateway-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: kgateway
      app.kubernetes.io/name: kgateway
      kgateway: kgateway
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "9092"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/component: controller
        app.kubernetes.io/instance: kgateway
        app.kubernetes.io/name: kgateway
        kgateway: kgateway
    spec:
      containers:
      - env:
        - name: GOMEMLIMIT
          valueFrom:
            resourceFieldRef:
              divisor: "1"
              resource: limits.memory
        - name: GOMAXPROCS
          valueFrom:
            resourceFieldRef:
              divisor: "1"
              resource: limits.cpu
        - name: KGW_LOG_LEVEL
          value: info
        - name: KGW_XDS_SERVICE_NAME
          value: kgateway
        - name: KGW_XDS_SERVICE_PORT
          value: "9977"
        - name: KGW_DEFAULT_IMAGE_REGISTRY
          value: cr.kgateway.dev/kgateway-dev
        - name: KGW_DEFAULT_IMAGE_TAG
          value: v2.3.0
        - name: KGW_DEFAULT_IMAGE_PULL_POLICY
          value: IfNotPresent
        - name: KGW_DISCOVERY_NAMESPACE_SELECTORS
          value: '[]'
        - name: KGW_POLICY_MERGE
          value: '{}'
        - name: KGW_VALIDATION_MODE
          value: standard
        - name: KGW_ENABLE_ENVOY
          value: "true"
        - name: KGW_GATEWAY_CLASS_PARAMETERS_REFS
          value: '{}'
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: cr.kgateway.dev/kgateway-dev/kgateway:v2.3.0
        imagePullPolicy: IfNotPresent
        name: controller
        ports:
        - containerPort: 9977
          name: grpc-xds
          protocol: TCP
        - containerPort: 9093
          name: health
          protocol: TCP
        - containerPort: 9092
          name: metrics
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 9093
          initialDelaySeconds: 1
          periodSeconds: 10
        resources: {}
        startupProbe:
          failureThreshold: 600
          httpGet:
            path: /readyz
            port: 9093
          initialDelaySeconds: 0
          periodSeconds: 1
      serviceAccountName: kgateway
