manifests/dev/cluster/kgateway/v1_service_kgateway.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: kgateway
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kgateway
    app.kubernetes.io/version: v2.3.0
    helm.sh/chart: kgateway-v2.3.0
    kgateway: kgateway
  name: kgateway
  namespace: kgateway-system
spec:
  ports:
  - name: grpc-xds
    port: 9977
    protocol: TCP
    targetPort: 9977
  - name: health
    port: 9093
    protocol: TCP
    targetPort: 9093
  - name: metrics
    port: 9092
    protocol: TCP
    targetPort: 9092
  selector:
    app.kubernetes.io/instance: kgateway
    app.kubernetes.io/name: kgateway
    kgateway: kgateway
  type: ClusterIP
